--- a/api-server/nodejs/package.json
+++ b/api-server/nodejs/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "connect": "^3.2.0",
     "js-yaml": "^3.3.0",
-    "swagger-tools": "0.10.1"
+    "swagger-tools": "0.10.1",
+    "syscoin": "^2.2.0"
   }
 }
