--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "connect": "^3.2.0",
     "js-yaml": "^3.3.0",
+    "jshashes": "^1.0.5",
     "jsonwebtoken": "^7.0.1",
     "swagger-tools": "0.10.1",
     "syscoin": "^2.2.0"
