--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "connect": "^3.2.0",
+    "cors": "^2.7.1",
     "js-yaml": "^3.3.0",
     "jshashes": "^1.0.5",
     "jsonwebtoken": "^7.0.1",
