--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -14,6 +14,9 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "Q": "0.0.1",
+    "babel": "^6.23.0",
+    "babel-core": "^6.24.1",
     "chai": "^3.5.0",
     "connect": "^3.2.0",
     "cors": "^2.7.1",
@@ -22,6 +25,8 @@
     "jshashes": "^1.0.5",
     "jsonwebtoken": "^7.0.1",
     "mocha": "^3.2.0",
+    "q": "^1.5.0",
+    "request-promise": "^4.2.0",
     "serve-static": "^1.12.1",
     "swagger-tools": "0.10.1",
     "syscoin": "^2.3.0"
