--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "syscoin-api",
   "description": "A full featured api for interacting with Syscoin commands both at an RPC level, as a REST API, and more.",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "server.js",
   "keywords": [
     "syscoin",
@@ -24,8 +24,7 @@
     }
   ],
   "repository": "https://github.com/syscoin/syscoin-api.git",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {},
   "bugs": {
     "url": "https://github.com/syscoin/syscoin-api/issues"
