--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -28,7 +28,7 @@
     "request-promise": "^4.2.0",
     "serve-static": "^1.12.4",
     "swagger-tools": "0.10.1",
-    "syscoin": "^2.4.7"
+    "syscoin-core": "https://github.com/syscoin/syscoin-core.git"
   },
   "bugs": {
     "url": "https://github.com/syscoin/syscoin-api/issues"
