--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "assert": "^1.4.1",
     "chai": "^3.5.0",
     "connect": "^3.6.3",
     "cors": "^2.8.4",
@@ -23,6 +24,7 @@
     "jshashes": "^1.0.7",
     "jsonwebtoken": "^7.4.3",
     "mocha": "^3.5.0",
+    "mongodb": "^2.2.31",
     "q": "^1.5.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
