--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -18,6 +18,7 @@
     "chai": "^3.5.0",
     "connect": "^3.6.5",
     "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "finalhandler": "^1.1.0",
     "he": "^1.1.1",
     "js-yaml": "^3.10.0",
