Changes to package.json and config to allow for more robust operating.

--- a/server/nodejs/package.json
+++ b/server/nodejs/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node .",
     "startd": "pm2 start node . $CONFIG --name 'sys-api-server'",
-    "test": "mocha **/*.spec.js -R spec"
+    "test": "mocha **/*.spec.js -R spec",
+    "isolated": "APIRUNMODE=isolated node .",
+    "integrated": "APIRUNMODE=integrated node ."
   },
   "main": "index.js",
   "keywords": [
