--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "syscoin-api",
+  "name": "@syscoinorg/syscoin-api",
   "description": "A full featured api for interacting with Syscoin commands both at an RPC level, as a REST API, and more.",
   "version": "1.1.2",
   "main": "server.js",
